--- a/K2048/MainPage.xaml
+++ b/K2048/MainPage.xaml
@@ -8,7 +8,9 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+	<Grid>
+		<Grid x:Name="GridGameBoard" HorizontalAlignment="Left" Height="824" Margin="10,48,0,0" VerticalAlignment="Top" Width="1257" KeyDown="GridGameBoard_KeyDown" Loaded="GridGameBoard_Loaded" BorderBrush="#FFDF0000" Background="#FFE58484"/>
+		<Button Content="Button" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="Button_Click"/>
 
-    </Grid>
+	</Grid>
 </Page>
