--- a/K2048/Generated Files/MainPage.xaml
+++ b/K2048/Generated Files/MainPage.xaml
@@ -8,9 +8,10 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid KeyDown="Grid_KeyDown">
-		<Grid x:Name="GridGameBoard" HorizontalAlignment="Left" Height="824" Margin="10,48,0,0" VerticalAlignment="Top" Width="1257" KeyDown="GridGameBoard_KeyDown" Loaded="GridGameBoard_Loaded" BorderBrush="#FFDF0000" Background="#FFE58484"/>
-		<Button Content="Button" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+	<Grid x:ConnectionId='1'                       >
+		<Grid x:ConnectionId='2' x:Name="GridGameBoard" HorizontalAlignment="Left" Height="824" Margin="10,48,0,0" VerticalAlignment="Top" Width="1257"                                                               BorderBrush="#FFDF0000" Background="#FFE58484"/>
+		<Button x:ConnectionId='3' Content="Button" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"                     />
 
 	</Grid>
 </Page>
+
