Down with(out) a bug

--- a/K2048/Generated Files/MainPage.xaml
+++ b/K2048/Generated Files/MainPage.xaml
@@ -11,6 +11,7 @@
 	<Grid x:ConnectionId='1'                       >
 		<Grid x:ConnectionId='2' x:Name="GridGameBoard" HorizontalAlignment="Left" Height="824" Margin="10,48,0,0" VerticalAlignment="Top" Width="1257"                                                               BorderBrush="#FFDF0000" Background="#FFE58484"/>
 		<Button x:ConnectionId='3' Content="Button" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"                     />
+		<Button x:ConnectionId='4' Content="Button" HorizontalAlignment="Left" Margin="97,10,0,0" VerticalAlignment="Top"                       />
 
 	</Grid>
 </Page>
