--- a/K2048/Generated Files/MainPage.xaml
+++ b/K2048/Generated Files/MainPage.xaml
@@ -9,12 +9,13 @@
 	mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid KeyDown="Grid_KeyDown">
-		<Grid x:Name="GridGameBoard" HorizontalAlignment="Left" Height="370" Margin="10,80,0,0" VerticalAlignment="Top" Width="370" Loaded="GridGameBoard_Loaded" BorderBrush="#FFDF0000" Background="#FFE58484"/>
-		<Button x:Name="ButtonNewGame" Content="New Game" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="ButtonNewGame_Click"/>
-		<Border x:Name="BorderGameOver" BorderBrush="Black" HorizontalAlignment="Center" Height="1022" Margin="0,48,0,0" VerticalAlignment="Top" Width="1899" Visibility="Collapsed">
+	<Grid x:ConnectionId='1'                       >
+		<Grid x:ConnectionId='2' x:Name="GridGameBoard" HorizontalAlignment="Left" Height="370" Margin="10,80,0,0" VerticalAlignment="Top" Width="370"                               BorderBrush="#FFDF0000" Background="#FFE58484"/>
+		<Button x:ConnectionId='3' x:Name="ButtonNewGame" Content="New Game" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"                            />
+		<Border x:ConnectionId='4' x:Name="BorderGameOver" BorderBrush="Black" HorizontalAlignment="Center" Height="1022" Margin="0,48,0,0" VerticalAlignment="Top" Width="1899" Visibility="Collapsed">
 			<TextBlock HorizontalAlignment="Center" Text="Game Over" TextWrapping="Wrap" VerticalAlignment="Center" Height="105" Width="856" Windows10FallCreatorsUpdate:HorizontalTextAlignment="Center" TextAlignment="Center" FontSize="72"/>
 		</Border>
 
 	</Grid>
 </Page>
+
